tests/invalid/Type_Invalid_5.whiley
type Contractive is Contractive | int